[metadata]
name = JavaImageTools
version = 0.1
long_description = file: ReadMe.md
description = 
url = https://github.com/KOLANICH-libs/JavaImageTools.py
author = KOLANICH
license = Unlicense
classifiers =
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Python Modules
keywords = JavaImageTools

[options]
packages = find:
install_requires =
	JAbs
	JPype1 # for now, not yet wrapped into abstraction layer
	numpy
	Pillow

python_requires = >=3.4
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
zip_safe = True
